// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > renders basic case correctly 1`] = `
"<div class="">
  <div class=""><input id="0" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with custom color correctly 1`] = `
"<div class="">
  <div class=""><input id="7" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with custom id correctly 1`] = `
"<div class="">
  <div class=""><input id="custom-radio-id" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with disabled correctly 1`] = `
"<div class="">
  <div class=""><input id="3" disabled="" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with help correctly 1`] = `
"<div class="">
  <div class=""><input id="5" type="radio" class=""></div>
  <div class=""><label for="5" class="">Radio Label
      <!--v-if-->
    </label>
    <p class="">Help text</p>
  </div>
</div>"
`;

exports[`Radio > renders with inputClass correctly 1`] = `
"<div class="">
  <div class=""><input id="8" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with label correctly 1`] = `
"<div class="">
  <div class=""><input id="4" type="radio" class=""></div>
  <div class=""><label for="4" class="">Radio Label
      <!--v-if-->
    </label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Radio > renders with label slot correctly 1`] = `
"<div class="">
  <div class=""><input id="9" type="radio" class=""></div>
  <div class=""><label for="9" class="">Label slot
      <!--v-if-->
    </label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Radio > renders with name correctly 1`] = `
"<div class="">
  <div class=""><input id="2" name="radioName" type="radio" class=""></div>
  <!--v-if-->
</div>"
`;

exports[`Radio > renders with required correctly 1`] = `
"<div class="">
  <div class=""><input id="6" required="" type="radio" class=""></div>
  <div class=""><label for="6" class="">Radio Label<span class="">*</span></label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Radio > renders with value correctly 1`] = `
"<div class="">
  <div class=""><input id="1" type="radio" class="" value="option1"></div>
  <!--v-if-->
</div>"
`;
